fix(knowledge): added resolution and description to KnowledgeDto to reflect changes to entity. Repaired broken Mapper. Added KnowledgeCreatedDto to allow for modal display